Tue Dec 31 10:12:14 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_29_Test.cpp:
          Added another member

Tue Dec 31 07:45:07 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Timer_Queue_Adapters.cpp:
          Call gettimeofday on the timer queue instead of calling
          ACE_OS directly, fixes problems when using the hr time. Thanks
          to Erik Sohns <erik dot sohns at web dot de> for reporting
          this and providing a patch

Mon Dec 30 12:31:27 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_31_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          New C++11 test

Mon Dec 30 11:18:12 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_stat.h:
          Define S_ISDIR when not defined

        * tests/Compiler_Features_29_Test.cpp:
        * tests/Compiler_Features_30_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Two new C++11 tests


Wed Dec 25 00:00:00 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * Merry Christmas everyone!

Mon Dec 23 10:19:42 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_23_Test.cpp:
        * tests/Compiler_Features_28_Test.cpp:
          Added missing include of cstdint

Fri Dec 20 13:43:13 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/bczar/bczar.html:
          Added package

Fri Dec 20 08:10:27 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Handle_Set.h:
          Fuzz error

        * bin/valgrind.supp:
          Disabled on RTI check, looks it causes problems with the
          latest valgrind release

Thu Dec 19 18:57:09 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Handle_Set.h:
          Added check that FD_SETSIZE may not be bigger than __FD_SETSIZE.